treesql-core/src/main/antlr4/io/broessl/treesql/grammar/.antlr/TreeSQLParser.java
// Generated from /workspaces/treeSQL/src/main/antlr4/io/broessl/treesql/grammar/TreeSQL.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TreeSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, OPEN_PAR=3, CLOSE_PAR=4, COMMA=5, STAR=6, PLUS=7, MINUS=8, 
		DIV=9, MOD=10, LT=11, LT_EQ=12, GT=13, GT_EQ=14, EQ=15, NOT_EQ=16, AND=17, 
		AS=18, ASC=19, DESC=20, FROM=21, IN=22, NOT_IN=23, LIMIT=24, MATCH=25, 
		NOT_MATCH=26, NOT=27, NULL=28, OR=29, ORDER_BY=30, SELECT=31, WHERE=32, 
		TRUE=33, FALSE=34, FUNC_NAME=35, NUMERIC_LITERAL=36, STRING_LITERAL=37, 
		SINGLE_LINE_COMMENT=38, JSON_TEXT_VALUE=39, RANGED_LITERAL=40, VALUE_AT_LITERAL=41, 
		PATH_VARIABLE=42;
	public static final int
		RULE_expr = 0, RULE_funcArgs = 1, RULE_literalValue = 2, RULE_selectStmt = 3, 
		RULE_selectCore = 4, RULE_whereExpr = 5, RULE_jsonTextValue = 6, RULE_resultColumn = 7, 
		RULE_orderByStmt = 8, RULE_limitStmt = 9, RULE_orderingTerm = 10, RULE_ascOrDesc = 11, 
		RULE_columnAlias = 12, RULE_functionName = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"expr", "funcArgs", "literalValue", "selectStmt", "selectCore", "whereExpr", 
			"jsonTextValue", "resultColumn", "orderByStmt", "limitStmt", "orderingTerm", 
			"ascOrDesc", "columnAlias", "functionName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "' '", "' JOIN '", "'('", "')'", "','", "'*'", "'+'", "'-'", "'/'", 
			"'%'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'AND'", "'AS'", 
			"'ASC'", "'DESC'", "'FROM'", "'IN'", "'NOT IN'", "'LIMIT'", "'MATCH'", 
			"'NOT MATCH'", "'NOT'", "'NULL'", "'OR'", "'ORDER BY'", "'SELECT'", "'WHERE'", 
			"'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "OPEN_PAR", "CLOSE_PAR", "COMMA", "STAR", "PLUS", "MINUS", 
			"DIV", "MOD", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NOT_EQ", "AND", "AS", 
			"ASC", "DESC", "FROM", "IN", "NOT_IN", "LIMIT", "MATCH", "NOT_MATCH", 
			"NOT", "NULL", "OR", "ORDER_BY", "SELECT", "WHERE", "TRUE", "FALSE", 
			"FUNC_NAME", "NUMERIC_LITERAL", "STRING_LITERAL", "SINGLE_LINE_COMMENT", 
			"JSON_TEXT_VALUE", "RANGED_LITERAL", "VALUE_AT_LITERAL", "PATH_VARIABLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TreeSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TreeSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public LiteralValueContext literalValue() {
			return getRuleContext(LiteralValueContext.class,0);
		}
		public TerminalNode NOT() { return getToken(TreeSQLParser.NOT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public TerminalNode OPEN_PAR() { return getToken(TreeSQLParser.OPEN_PAR, 0); }
		public FuncArgsContext funcArgs() {
			return getRuleContext(FuncArgsContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(TreeSQLParser.CLOSE_PAR, 0); }
		public TerminalNode STAR() { return getToken(TreeSQLParser.STAR, 0); }
		public TerminalNode DIV() { return getToken(TreeSQLParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(TreeSQLParser.MOD, 0); }
		public TerminalNode PLUS() { return getToken(TreeSQLParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(TreeSQLParser.MINUS, 0); }
		public TerminalNode LT() { return getToken(TreeSQLParser.LT, 0); }
		public TerminalNode LT_EQ() { return getToken(TreeSQLParser.LT_EQ, 0); }
		public TerminalNode GT() { return getToken(TreeSQLParser.GT, 0); }
		public TerminalNode GT_EQ() { return getToken(TreeSQLParser.GT_EQ, 0); }
		public TerminalNode NOT_EQ() { return getToken(TreeSQLParser.NOT_EQ, 0); }
		public TerminalNode EQ() { return getToken(TreeSQLParser.EQ, 0); }
		public TerminalNode IN() { return getToken(TreeSQLParser.IN, 0); }
		public TerminalNode NOT_IN() { return getToken(TreeSQLParser.NOT_IN, 0); }
		public TerminalNode MATCH() { return getToken(TreeSQLParser.MATCH, 0); }
		public TerminalNode NOT_MATCH() { return getToken(TreeSQLParser.NOT_MATCH, 0); }
		public TerminalNode AND() { return getToken(TreeSQLParser.AND, 0); }
		public TerminalNode OR() { return getToken(TreeSQLParser.OR, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(29);
				literalValue();
				}
				break;
			case 2:
				{
				setState(30);
				match(NOT);
				setState(31);
				match(T__0);
				setState(32);
				expr(10);
				}
				break;
			case 3:
				{
				setState(33);
				functionName();
				setState(34);
				match(OPEN_PAR);
				setState(35);
				funcArgs();
				setState(36);
				match(CLOSE_PAR);
				}
				break;
			case 4:
				{
				setState(38);
				functionName();
				setState(39);
				match(OPEN_PAR);
				setState(40);
				match(CLOSE_PAR);
				}
				break;
			case 5:
				{
				setState(42);
				match(OPEN_PAR);
				setState(43);
				expr(0);
				setState(44);
				match(CLOSE_PAR);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(102);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(48);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(50);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(49);
							match(T__0);
							}
						}

						setState(52);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1600L) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(54);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(53);
							match(T__0);
							}
						}

						setState(56);
						expr(10);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(57);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(59);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(58);
							match(T__0);
							}
						}

						setState(61);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(63);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(62);
							match(T__0);
							}
						}

						setState(65);
						expr(9);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(66);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(68);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(67);
							match(T__0);
							}
						}

						setState(70);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 129024L) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(72);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(71);
							match(T__0);
							}
						}

						setState(74);
						expr(8);
						}
						break;
					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(75);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(77);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(76);
							match(T__0);
							}
						}

						setState(79);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 247463936L) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(81);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(80);
							match(T__0);
							}
						}

						setState(83);
						expr(7);
						}
						break;
					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(84);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(86);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(85);
							match(T__0);
							}
						}

						setState(88);
						match(AND);
						setState(90);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(89);
							match(T__0);
							}
						}

						setState(92);
						expr(6);
						}
						break;
					case 6:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(93);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(95);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(94);
							match(T__0);
							}
						}

						setState(97);
						match(OR);
						setState(99);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(98);
							match(T__0);
							}
						}

						setState(101);
						expr(5);
						}
						break;
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncArgsContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TreeSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TreeSQLParser.COMMA, i);
		}
		public FuncArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcArgs; }
	}

	public final FuncArgsContext funcArgs() throws RecognitionException {
		FuncArgsContext _localctx = new FuncArgsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8513027833864L) != 0)) {
				{
				{
				setState(107);
				expr(0);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(108);
					match(COMMA);
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__0) {
						{
						setState(109);
						match(T__0);
						}
					}

					setState(112);
					expr(0);
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralValueContext extends ParserRuleContext {
		public TerminalNode NUMERIC_LITERAL() { return getToken(TreeSQLParser.NUMERIC_LITERAL, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(TreeSQLParser.STRING_LITERAL, 0); }
		public TerminalNode JSON_TEXT_VALUE() { return getToken(TreeSQLParser.JSON_TEXT_VALUE, 0); }
		public TerminalNode RANGED_LITERAL() { return getToken(TreeSQLParser.RANGED_LITERAL, 0); }
		public TerminalNode VALUE_AT_LITERAL() { return getToken(TreeSQLParser.VALUE_AT_LITERAL, 0); }
		public TerminalNode PATH_VARIABLE() { return getToken(TreeSQLParser.PATH_VARIABLE, 0); }
		public TerminalNode NULL() { return getToken(TreeSQLParser.NULL, 0); }
		public TerminalNode TRUE() { return getToken(TreeSQLParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(TreeSQLParser.FALSE, 0); }
		public LiteralValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literalValue; }
	}

	public final LiteralValueContext literalValue() throws RecognitionException {
		LiteralValueContext _localctx = new LiteralValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_literalValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8478533877760L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectStmtContext extends ParserRuleContext {
		public SelectCoreContext selectCore() {
			return getRuleContext(SelectCoreContext.class,0);
		}
		public WhereExprContext whereExpr() {
			return getRuleContext(WhereExprContext.class,0);
		}
		public OrderByStmtContext orderByStmt() {
			return getRuleContext(OrderByStmtContext.class,0);
		}
		public LimitStmtContext limitStmt() {
			return getRuleContext(LimitStmtContext.class,0);
		}
		public SelectStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStmt; }
	}

	public final SelectStmtContext selectStmt() throws RecognitionException {
		SelectStmtContext _localctx = new SelectStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			selectCore();
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(123);
				whereExpr();
				}
				break;
			}
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				{
				setState(126);
				orderByStmt();
				}
				break;
			}
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(129);
				limitStmt();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectCoreContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(TreeSQLParser.SELECT, 0); }
		public List<ResultColumnContext> resultColumn() {
			return getRuleContexts(ResultColumnContext.class);
		}
		public ResultColumnContext resultColumn(int i) {
			return getRuleContext(ResultColumnContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TreeSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TreeSQLParser.COMMA, i);
		}
		public TerminalNode FROM() { return getToken(TreeSQLParser.FROM, 0); }
		public List<JsonTextValueContext> jsonTextValue() {
			return getRuleContexts(JsonTextValueContext.class);
		}
		public JsonTextValueContext jsonTextValue(int i) {
			return getRuleContext(JsonTextValueContext.class,i);
		}
		public SelectCoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectCore; }
	}

	public final SelectCoreContext selectCore() throws RecognitionException {
		SelectCoreContext _localctx = new SelectCoreContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selectCore);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(132);
			match(SELECT);
			setState(133);
			match(T__0);
			setState(134);
			resultColumn();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(135);
				match(COMMA);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(136);
					match(T__0);
					}
				}

				setState(139);
				resultColumn();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,25,_ctx) ) {
			case 1:
				{
				setState(145);
				match(T__0);
				setState(146);
				match(FROM);
				setState(147);
				match(T__0);
				{
				setState(148);
				jsonTextValue();
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1 || _la==JSON_TEXT_VALUE) {
					{
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__1) {
						{
						setState(149);
						match(T__1);
						}
					}

					setState(152);
					jsonTextValue();
					}
				}

				}
				}
				break;
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhereExprContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(TreeSQLParser.WHERE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public WhereExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereExpr; }
	}

	public final WhereExprContext whereExpr() throws RecognitionException {
		WhereExprContext _localctx = new WhereExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_whereExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(T__0);
			setState(158);
			match(WHERE);
			setState(159);
			match(T__0);
			setState(160);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonTextValueContext extends ParserRuleContext {
		public TerminalNode JSON_TEXT_VALUE() { return getToken(TreeSQLParser.JSON_TEXT_VALUE, 0); }
		public JsonTextValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonTextValue; }
	}

	public final JsonTextValueContext jsonTextValue() throws RecognitionException {
		JsonTextValueContext _localctx = new JsonTextValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jsonTextValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(JSON_TEXT_VALUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResultColumnContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode AS() { return getToken(TreeSQLParser.AS, 0); }
		public ColumnAliasContext columnAlias() {
			return getRuleContext(ColumnAliasContext.class,0);
		}
		public ResultColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resultColumn; }
	}

	public final ResultColumnContext resultColumn() throws RecognitionException {
		ResultColumnContext _localctx = new ResultColumnContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_resultColumn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			expr(0);
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,26,_ctx) ) {
			case 1:
				{
				setState(165);
				match(T__0);
				setState(166);
				match(AS);
				setState(167);
				match(T__0);
				setState(168);
				columnAlias();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrderByStmtContext extends ParserRuleContext {
		public TerminalNode ORDER_BY() { return getToken(TreeSQLParser.ORDER_BY, 0); }
		public OrderingTermContext orderingTerm() {
			return getRuleContext(OrderingTermContext.class,0);
		}
		public OrderByStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orderByStmt; }
	}

	public final OrderByStmtContext orderByStmt() throws RecognitionException {
		OrderByStmtContext _localctx = new OrderByStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_orderByStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(T__0);
			setState(172);
			match(ORDER_BY);
			setState(173);
			match(T__0);
			setState(174);
			orderingTerm();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LimitStmtContext extends ParserRuleContext {
		public TerminalNode LIMIT() { return getToken(TreeSQLParser.LIMIT, 0); }
		public TerminalNode NUMERIC_LITERAL() { return getToken(TreeSQLParser.NUMERIC_LITERAL, 0); }
		public LimitStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_limitStmt; }
	}
